app/product/components/images/ProductPage.module.css
.imageSection {
    display: flex;
    flex-direction: column;
  }

  .imagePlaceholder {
    width: 100%;
    height: 450px;
    border-radius: 8px;
    background-color: #F5F5F5;
    background-image: url('/images/placeholder-product.svg');
    background-size: 30%;
    background-repeat: no-repeat;
    background-position: center;
  }

  .thumbnailPlaceholder {
    width: 80px;
    height: 80px;
    border-radius: 4px;
    background-color: #F5F5F5;
    background-image: url('/images/placeholder-product.svg');
    background-size: 60%;
    background-repeat: no-repeat;
    background-position: center;
  }
  
  /* Main image container */
  .mainImageContainer {
    margin-bottom: 1rem; 
  }

  .mainImage {
    width: 100%;
    height: auto;
    display: block;
    border-radius: 8px;
  }
  
  /* Carousel container */
  .carouselContainer {
    display: flex;
    gap: 0.5rem;
  }
  
  /* Thumbnails */
  .thumbnail {
    width: 80px;
    height: 80px;
    cursor: pointer;
    border: 1px solid transparent;
  }
  
  .thumbnailSelected {
    width: 80px;
    height: 80px;
    cursor: pointer;
    border: 2px solid #000; /* highlight selected thumbnail */
  }

  @media screen and (max-width: 768px) {
    .mainImage {
      width: 100%;
      height: auto;
    }

      /* Carousel container */
  .carouselContainer {
    display: flex;
    gap: 0.5rem;
  }
  }
  

  @media screen and (max-width: 480px) {

  }

